Added professional README for Connect Four JavaFX